add new form for parameter select

--- a/speedsheet/AddinModule.resx
+++ b/speedsheet/AddinModule.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="speedSheetTab.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+    <value>150, 17</value>
   </metadata>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>285, 17</value>
@@ -127,8 +127,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAe
-        CwAAAk1TRnQBSQFMAwEBAAEIAQABCAEAASABAAEgAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABY
+        CgAAAk1TRnQBSQFMAwEBAAEQAQABEAEAASABAAEgAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
         AYADAAEgAwABAQEAAQgGAAEQGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
         AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
         AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
@@ -156,26 +156,23 @@
         AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
         AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
         ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
-        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8BAAL2BPUB/wH1Af8B9gH/
-        AfUB/wH1Af8B9gL1Av8C9Qj/AvVgAAL2Af8D9QX/AvUF/wH2AfUM/2AAAvYB/wH1Av8D9gH/AfUB/wH1
-        Af8B9gL0AvYE/wP1A/YD/2AAAf8B9gP/BPYB/wX1BP8B9gH1A/8D9QP2Af8B9WAABP8D9gL/A/QBGQEJ
-        AfAB9QX0AvUB9AH/AvUD9gH/AfVgAAT/AvYB/wH0AQkBtQG0Aa0BrgGLAesB7QG1AgkC7gG8AvABGwHz
-        AfYB9QH2A/9gAAT/AvUB9AG7AosBigOLA2YBiwG0ArUBBwLvAbwB8wH2Bf9gAAL/AfUB/wL1ARkBiwGm
-        Aa0BrAGtAawEiwGmAWUBhgGuAbsB8AHxAfIB9QX/AfVgAAL/AfUB/wL1ARkCiwGtAqwCpgKGA4sBhgGm
-        AYsBtQH1Af8C9QP/AvVgAAT/A/UBuwGGAq0BrAHHAaYBXwGGAYsCpgLHAaYBiwG1AfQB/wL1Av8C9WAA
-        BP8B9gL/AfQBtQGGAq0CxwKmAYYBZQKmAscBpgFlAbUC9QP/AvZgAAT/AvYC/wH0AQkBrQGmA60DiwKm
-        AscBpgGGAWwBGQL/AfYB/wL2YAAD/wT2A/UBCQGtAqYFiwGtBKYBZgEZAfUE9gH/YAAE/wT2Af8B9QH0
-        Ac8CrQKmAWYCiwGGAaYBhgFlAWYBtAEZAfUD9gH1Af9gAAL2Av8B9QL/AfYB/wH0AeIBiwK0AosBhgFm
-        BIsBkQG1ARkC9QP2Av9gAAL2AfUB/wL1Af8B9AL1AfQBtAGLAa0BswG0Aa0BhgGuAe8C9QH0Av8B9QH/
-        AvYD/2AAAfUB9gf/AfUB4gG0AYsCrQHbAYsBtQHdAesB9QH2AfUD/wP1A/9gAAL1Af8E9gL/AfUBGQK0
-        AYsBrQGLAWwBGQH/AewBHAPDAvYB/wL1A/9gAAT/AvYD/wH1ARkBtAEJAbQBiwFlAbsB9QH2AZkBUQGZ
-        AZoCwwH2Bf8B9mAACf8B9QEZAbUBGQEJAYsBkQH0AfUCwwFRAnkBoAHDAfYE/wL2YAAJ/wH1AfAB9wEZ
-        AQkBiwEJAfUB9gHDAZoEeQHDAfYE/wL2YAAI/wH1Af8B7gH3ARkBuwG1AfQB9QH2AcMCoAJ5AZoCwwX/
-        AfZgAAj/AfUB/wEHAe8B8QH3ARkB9QH/AfUB9gHDARoBmgGgAsMC9gT/AfZgAAj/AfUB/wEHAe8BvAHv
-        Af8B9AH1Af8B9gEbBMME9gT/YAAH/wL1Af8BvAH3Ae8B9QH/AfUF/wL1BfYE/2AACv8BBwHtAfEB/wH1
-        B/8B9Qn/YAAI/wL1Ae8BkgL/AfUC/wH2Dv9gAAr/AbwB8QT/BPYM/2AACv8B9AH/AfUD/wb2Cv9gAAj/
-        AfUE/wH1BP8F9gn/YAAI/wH2Av8B9Ar/BPYG/2AACf8E9gH/AfUH/wb2BP9gAAFCAU0BPgcAAT4DAAEo
-        AwABgAMAASADAAEBAQABAQYAAQIWAAP//wD/AAMACw==
+        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8BAAL2B/8B9gX/AfYQ/2AA
+        AvYQ/wH2Df9gAAL2BP8D9gX/AfYC9AL2B/8D9gP/YAAB/wH2A/8E9gr/AfYH/wP2Av9gAAT/A/YC/wP0
+        ARkBCQHwAf8F9AL/AfQD/wP2Av9gAAT/AvYB/wH0AQkBtQG0Aa0BrgGLAesB7QG1AgkDvALwARsB8wH2
+        Af8B9gP/YAAG/wH0AbsCiwGKA4sDZgGLAbQCtQEHAu8BvAHzAfYF/2AABv8BGQGLAaYBrQGsAa0BrASL
+        AaYBZQGGAa4BuwHwAfEB8gf/YAAG/wEZAosBrQKsAqYChgOLAYYBpgGLAbUJ/2AAB/8BuwGGAq0BrAHH
+        AaYBXwGGAYsCpgLHAaYBiwG1AfQH/2AABP8B9gL/AfQBtQGGAq0CxwKmAYYBZQKmAscBpgFlAbUF/wL2
+        YAAE/wL2Av8B9AEJAa0BpgOtA4sCpgLHAaYBhgFsARkC/wH2Af8C9mAAA/8E9gP/AQkBrQKmBYsBrQSm
+        AWYBGQH/BPYB/2AABP8E9gL/AfQBzwKtAqYBZgKLAYYBpgGGAWUBZgG0ARkB/wP2Av9gAAL2Bf8B9gH/
+        AfQB4gGLArQCiwGGAWYEiwGRAbUBGQL/A/YC/2AAAvYF/wH0Av8B9AG0AYsBrQGzAbQBrQGGAa4B7wL/
+        AfQE/wL2A/9gAAH/AfYI/wHiAbQBiwKtAdsBiwG1Ad0B6wH/AfYK/2AAA/8E9gP/ARkCtAGLAa0BiwFs
+        ARkB/wHsARwDwwL2Bv9gAAT/AvYE/wEZAbQBCQG0AYsBZQG7Af8B9gGZAVEBmQGaAsMB9gX/AfZgAAr/
+        ARkBtQEZAQkBiwGRAfQB/wLDAVECeQGgAcMB9gT/AvZgAAr/AfAB9wEZAQkBiwEJAf8B9gHDAZoEeQHD
+        AfYE/wL2YAAK/wG8AfcBGQG7AbUB9AH/AfYBwwKgAnkBmgLDBf8B9mAACv8BBwHvAfEB9wEZA/8B9gHD
+        ARoBmgGgAsMC9gT/AfZgAAr/AQcB7wG8Ae8B/wH0Av8B9gEbBMME9gT/YAAK/wG8AfcB7wr/BfYE/2AA
+        Cv8BBwHtAfET/2AACv8B7wGSBf8B9g7/YAAK/wG8AfEE/wT2DP9gAAr/AfQF/wb2Cv9gABL/BfYJ/2AA
+        CP8B9gL/AfQK/wT2Bv9gAAn/BPYJ/wb2BP9gAAFCAU0BPgcAAT4DAAEoAwABgAMAASADAAEBAQABAQYA
+        AQIWAAP//wD/AAMACw==
 </value>
   </data>
   <metadata name="adxExcelEvents.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
